fix cdn.jsdelivr SSL , improve UI UX , upgrade java

--- a/public/html/leo-event-proxy.html
+++ b/public/html/leo-event-proxy.html
@@ -150,7 +150,7 @@
     	}
 
   		var cbKey = "20231107";
-	   	var leoObserverJsUrl = "https://cdn.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files@v0.8.9.22/js/leo-observer/leo.observer.min.js?cb="+cbKey;
+	   	var leoObserverJsUrl = "https://gcore.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files@v0.8.9.22/js/leo-observer/leo.observer.min.js?cb="+cbKey;
 	   	var isDev = ROOT_DOMAIN === "obs.example.com";
   		if(isDev) { 
 			leoObserverJsUrl = "https://obs.example.com/public/js/leo-observer/leo.observer.js?cb="+(new Date().getTime());
