--- a/resources/app-templates/content-hub/index.html
+++ b/resources/app-templates/content-hub/index.html
@@ -20,13 +20,13 @@
 		rel="stylesheet">
 
 	<!-- Icons -->
-	<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-	<link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel="stylesheet">
+	<link href="https://gcore.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+	<link href="https://gcore.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel="stylesheet">
 	<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 
   <!-- Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel="stylesheet">
+  <link href="https://gcore.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+  <link href="https://gcore.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel="stylesheet">
   <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 
   <!-- Vendor CSS Files -->
@@ -51,7 +51,7 @@
 		<div class="container d-flex align-items-center">
 			<div class="logo mr-auto">
 				<!-- Uncomment below if you prefer to use an image logo -->
-				<a href="/"><img src="https://cdn.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files@latest/images/leo-cdp-logo.png" alt="LEO CDP" class="img-fluid"></a>
+				<a href="/"><img src="https://gcore.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files@latest/images/leo-cdp-logo.png" alt="LEO CDP" class="img-fluid"></a>
 			</div>
 			<nav class="nav-menu d-none d-lg-block">
 				<ul>
