--- a/resources/app-templates/leocdp-admin/common-widgets/chatbot.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/chatbot.html
@@ -35,7 +35,7 @@ div.botui-actions-buttons {
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title text-center"> <i class="fa fa-commenting-o"></i> Iris - Your Personal Assistant</h4>
+                <h4 class="modal-title text-center"> <i class="fa fa-commenting-o"></i> Athena - Your Personal Assistant</h4>
             </div>
             <div class="modal-body row">
 				<div class="col-md-9" >
@@ -84,7 +84,7 @@ div.botui-actions-buttons {
 	<a href="https://knowledge.leocdp.net/p/what-is-uspa-framework.html"> <i class="fa fa-book" aria-hidden="true"></i> Introduction to USPA framework</a>
 </li>
 <li>
-	<a href="https://knowledge.leocdp.net/p/introduction-to-leo-cdp-101.html"> <i class="fa fa-book" aria-hidden="true"></i> Introduction to LEO CDP framework </a>
+	<a href="https://docs.google.com/document/d/1cavhFAs_uX-98qUvtXJI3v859I6h3knl0m_tSQ4235M/view"> <i class="fa fa-book" aria-hidden="true"></i> Introduction to D-CDP </a>
 </li>
 </ul>
 </script>
