--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -161,8 +161,8 @@
 	<!-- ChartJS -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.2.0/chartjs-plugin-datalabels.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://cdn.jsdelivr.net/npm/chartjs-chart-sankey@latest" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://cdn.jsdelivr.net/npm/chartjs-chart-matrix@latest" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://gcore.jsdelivr.net/npm/chartjs-chart-sankey@latest" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://gcore.jsdelivr.net/npm/chartjs-chart-matrix@latest" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- CodeMirror for HTML Editor -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/codemirror.min.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -188,9 +188,9 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- FunnelGraph.js  -->
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/css/main.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/css/theme.css" crossorigin="anonymous" referrerpolicy="no-referrer">
-	<script src="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/js/funnel-graph.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<link rel="stylesheet" type="text/css" href="https://gcore.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/css/main.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+	<link rel="stylesheet" type="text/css" href="https://gcore.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/css/theme.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+	<script src="https://gcore.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/js/funnel-graph.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- Web Socket  -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -214,13 +214,13 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	
 	<!-- Cytoscape.js for Graph Visualization -->
-	<script src="https://cdn.jsdelivr.net/npm/cytoscape@3.28.1/dist/cytoscape.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://cdn.jsdelivr.net/npm/layout-base@2.0.1/layout-base.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://cdn.jsdelivr.net/npm/avsdf-base@1.0.0/avsdf-base.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://cdn.jsdelivr.net/npm/dagre@0.8.5/dist/dagre.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://cdn.jsdelivr.net/npm/cytoscape-dagre@2.5.0/cytoscape-dagre.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://cdn.jsdelivr.net/npm/cytoscape-avsdf@1.0.0/cytoscape-avsdf.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://cdn.jsdelivr.net/npm/cytoscape-node-html-label@1.2.2/dist/cytoscape-node-html-label.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://gcore.jsdelivr.net/npm/cytoscape@3.29.2/dist/cytoscape.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://gcore.jsdelivr.net/npm/layout-base@2.0.1/layout-base.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://gcore.jsdelivr.net/npm/avsdf-base@1.0.0/avsdf-base.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://gcore.jsdelivr.net/npm/dagre@0.8.5/dist/dagre.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://gcore.jsdelivr.net/npm/cytoscape-dagre@2.5.0/cytoscape-dagre.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://gcore.jsdelivr.net/npm/cytoscape-avsdf@1.0.0/cytoscape-avsdf.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://gcore.jsdelivr.net/npm/cytoscape-node-html-label@1.2.2/dist/cytoscape-node-html-label.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- cytoscape-panzoom -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cytoscape-panzoom/2.5.3/cytoscape.js-panzoom.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -233,14 +233,22 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- Chroma.js for all kinds of color conversions and color scales  -->
-	<script src="https://cdn.jsdelivr.net/npm/chroma-js@2.4.2/chroma.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://gcore.jsdelivr.net/npm/chroma-js@2.4.2/chroma.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- https://markjs.io : keyword highlighter  -->
-	<script src="https://cdn.jsdelivr.net/npm/mark.js@8.11.1/dist/jquery.mark.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://gcore.jsdelivr.net/npm/mark.js@8.11.1/dist/jquery.mark.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
-	<!-- https://github.com/jerosoler/Drawflow : create data flows -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jerosoler/Drawflow/dist/drawflow.min.css" rel="stylesheet" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<script src="https://cdn.jsdelivr.net/gh/jerosoler/Drawflow/dist/drawflow.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<!-- videojs player -->
+	<script src="https://{{baseStaticUrl}}/mediaplayer/mediaplayer.one.min.js" async="true"></script>
+	
+	<!-- mermaid-js: create diagrams and visualizations using text and code -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.9.0/mermaid.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" async="true"></script>
+	
+	<!-- marked.js to parse markdown code into HTML -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/12.0.2/marked.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" async="true"></script>
+	
+	<!-- DOMPurify XSS sanitizer for HTML -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.1.0/purify.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" async="true" ></script>
 	
 	<!-- i18n Data Model -->
 	<script src="//{{dnsDomainLeoAdmin}}/view/i18n/us.js?admin=1&_={{cacheBustingKey}}"></script>
@@ -272,18 +280,7 @@
 	<script src="https://{{baseStaticUrl}}/js/filepond/filepond.js?_={{cacheBustingKey}}"></script>
 	<script src="https://{{baseStaticUrl}}/js/filepond/config-filepond.js?_={{cacheBustingKey}}"></script>
 	
-	<!-- videojs player -->
-	<script src="https://{{baseStaticUrl}}/mediaplayer/mediaplayer.one.min.js" async="true"></script>
-	
-	<!-- mermaid-js: create diagrams and visualizations using text and code -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.5.1/mermaid.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" async="true"></script>
-	
-	<!-- marked.js to parse markdown code into HTML -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/9.1.2/marked.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" async="true"></script>
-	
-	<!-- DOMPurify XSS sanitizer for HTML -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" async="true" ></script>
-	
+		
 	<!-- LEO Admin Core -->
 	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leo.admin.common.js?admin=1&_={{cacheBustingKey}}" ></script>
 	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.router.js?admin=1&_={{cacheBustingKey}}"></script>
@@ -317,6 +314,9 @@
 	
 	<!-- data service -->
 	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.data.service.js?admin=1&_={{cacheBustingKey}}" async="true" ></script>
+	
+	<!-- campaign -->
+	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.campaign.js?admin=1&_={{cacheBustingKey}}" async="true" ></script>
 	
 	<!-- after deps are loaded -->
 	<script type="text/javascript" >
