--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -9,7 +9,8 @@
 		</button>
 
 		<a class="navbar-brand" href="/">
-			<img id="logo-img" src="" alt="MainLogo" style="display: none;" title="CDP" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Your Customer Data Platform for Smart Business" />
+			<img id="logo-img" src="" alt="MainLogo" style="display: none;" title="CDP" data-container="body" data-toggle="popover" data-placement="bottom" 
+									data-content="Smart Customer Data Platform with AI" />
 		</a>
 
 		<div style="width: 100%;">
@@ -20,8 +21,8 @@
 		<!-- Top User Menu -->
 		<ul class="nav navbar-right top-nav">
 			<li>				 
-				<a href="javascript: initLeoChatBot('global')" title="LEO Chatbot" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Your personal AI assistant on the CDP"  > 
-					<i class="fa fa-commenting-o"></i> LEO Chatbot 
+				<a href="javascript: initLeoChatBot('global')" title="Athena Chatbot" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Your personal AI assistant on the CDP"  > 
+					<i class="fa fa-commenting-o"></i> Athena Chatbot 
 				</a> 
 			</li>
 			<li class="dropdown" style="min-width:168px!important;">
