--- a/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
+++ b/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
@@ -28,8 +28,8 @@
 				<li class="active" >
 					<a href="javascript:" data-target-tab="panel_data_quality_scoring" title="Profile Metadata to compute the total of Data Quality Score" > <i class="fa fa-list-ul" aria-hidden="true"></i> Data Quality Scoring </a>
 		       	</li>
-		       	<li >
-					<a href="javascript:" data-target-tab="panel_sys_services" title="System Services" > <i class="fa fa-cogs" aria-hidden="true"></i> System Services </a>
+		       	<li style="display: none;">
+`					<a href="javascript:" data-target-tab="panel_sys_services" title="System Services" > <i class="fa fa-cogs" aria-hidden="true"></i> System Services </a>
 		       	</li>
 		       	<li >
 					<a href="javascript:" data-target-tab="panel_sys_upgrade" title="Upgrade System" > <i class="fa fa-cloud-download" aria-hidden="true"></i> Upgrade System </a>
