--- a/resources/app-templates/recommender/content-item.html
+++ b/resources/app-templates/recommender/content-item.html
@@ -27,7 +27,7 @@
 	<meta name="theme-color" content="#ffffff">
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" >
+	<link rel="stylesheet" href="https://gcore.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" >
 	
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
