--- a/resources/app-templates/web-form/template-survey-form.html
+++ b/resources/app-templates/web-form/template-survey-form.html
@@ -30,7 +30,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.33/moment-timezone-with-data.min.js" ></script>
 		
 	<!-- CSS Icon  -->
-	<link href="https://cdn.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files/css/font-awesome.min.css" rel="stylesheet" />
+	<link href="https://gcore.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files/css/font-awesome.min.css" rel="stylesheet" />
 	
 	<!-- Main CSS for Survey UI -->
 	<link href="https://{{baseStaticUrl}}/css/leo-survey.css?_={{cacheBustingKey}}" rel="stylesheet" />
