--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -136,20 +136,20 @@
 			<!-- tab 5 User Authorization  -->
 			<div class="tab-pane" id="panel_journey_data_authorization" >
 				<div class="top_page_header" >
-					<h4> User Authorization of journey map "<span id="authorizedJourneyName"></span>" </h4>
+					<h4> The user authorization of <span id="authorizedJourneyName" style="font-weight: bold;"></span> </h4>
 				</div>
 		        <div class="col-lg-12">
 		            <div class="form-group row"  >
-						<label class="control-label col-sm-3" for="authorizedJourneyViewers">Authorized users can view data</label>
-						<div class="col-sm-9" >
+						<label class="control-label col-lg-4" for="authorizedJourneyViewers">Authorized users can view this data journey map</label>
+						<div class="col-lg-8" >
 							<select id="authorizedJourneyViewers" multiple data-placeholder="Choose an authorized data viewer" class="select" style="display: none;" >
 							  	<!-- list of login accounts -->
 							</select>
 						</div>
 					</div>
 					<div class="form-group row"  >
-						<label class="control-label col-sm-3" for="authorizedJourneyEditors">Authorized users can update data</label>
-						<div class="col-sm-9" >
+						<label class="control-label col-lg-4" for="authorizedJourneyEditors">Authorized users can update this data journey map</label>
+						<div class="col-lg-8" >
 							<select id="authorizedJourneyEditors" multiple data-placeholder="Choose an authorized data editor" class="select" style="display: none;" >
 							  	<!-- list of login accounts -->
 							</select>
@@ -157,7 +157,7 @@
 					</div>
 					<div class="checkbox">
 					  <label style="font-weight: bold;">
-					  	<input type="checkbox" id="updateAllProfilesInJourney" checked="checked"> Use cascading update data authorization for all customer profiles in this journey map
+					  	<input type="checkbox" id="updateAllProfilesInJourney" checked="checked"> Use cascading update data authorization for all customer profiles in this data journey map
 					  </label>
 					</div>
 					<div class="form-group text-right"  >
