--- a/resources/app-templates/target-media/content-recommendation.html
+++ b/resources/app-templates/target-media/content-recommendation.html
@@ -3,9 +3,9 @@
 <head>
 <title>Recommended Products</title>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+<link rel="stylesheet" href="https://gcore.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+<script src="https://gcore.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+<script src="https://gcore.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
