--- a/resources/app-templates/target-media/short-link-click.html
+++ b/resources/app-templates/target-media/short-link-click.html
@@ -14,7 +14,7 @@
 	<meta http-equiv="Expires" content="0" />
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+	<script src="https://gcore.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
