--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -40,11 +40,11 @@
 					  		<span class="data_field" data-field="typeAsText" data-fieldholder="html"  data-fieldtype="string"  > - </span>
 					  	</li>
                     	<li class="list-group-item" >
-					  		<i class="fa fa-tags" aria-hidden="true"></i> <b> In Journey Maps: </b> 
+					  		<i class="fa fa-tags" aria-hidden="true"></i> <b> Data Journey Maps: </b> 
 					  		<span class="data_field" id="profileInJourneyMaps" > </span> 
 					  	</li>
 					  	<li class="list-group-item">
-					  		<i class="fa fa-tags" aria-hidden="true"></i> <b> In Segments: </b> 
+					  		<i class="fa fa-tags" aria-hidden="true"></i> <b> Segments: </b> 
 					  		<span class="data_field" id="profileInSegments" > </span> 
 					  	</li>
 					  	<li class="list-group-item" style="display: none">
