--- a/resources/app-templates/leocdp-admin/common-widgets/chatbot.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/chatbot.html
@@ -35,7 +35,7 @@ div.botui-actions-buttons {
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title text-center"> <i class="fa fa-commenting-o"></i> Athena - Your Personal Assistant</h4>
+                <h4 class="modal-title text-center"> <i class="fa fa-commenting-o"></i> Leo Chatbot - Your Personal Assistant</h4>
             </div>
             <div class="modal-body row">
 				<div class="col-md-9" >
