update , fix bugs

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -242,7 +242,7 @@
 	<script src="https://{{baseStaticUrl}}/mediaplayer/mediaplayer.one.min.js" async="true"></script>
 	
 	<!-- mermaid-js: create diagrams and visualizations using text and code -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.9.0/mermaid.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" async="true"></script>
+	<script src="https://gcore.jsdelivr.net/npm/mermaid@10.9.1/dist/mermaid.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" async="true"></script>
 	
 	<!-- marked.js to parse markdown code into HTML -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/12.0.2/marked.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" async="true"></script>
