--- a/resources/app-templates/leocdp-admin/modules/campaign/campaign-list.html
+++ b/resources/app-templates/leocdp-admin/modules/campaign/campaign-list.html
@@ -35,7 +35,7 @@
                       
                       <th>Updated at</th>
                       <th>Last run </th>
-                      <th>Owner Name</th>
+                      <th>Owner User Login</th>
                       <th>Actions</th>
                   </tr>
               </thead>
