--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -1105,7 +1105,7 @@
 			<div class="tab-pane" id="panel_duplicate_profiles"  >
 		     	
 	     		<h4 class="highlight_text" > <i class="fa fa-list-ol" aria-hidden="true"></i> Top duplicate profiles 
-	     			<button id="btn_profile_deduplicate" type="button" class="btn btn-sm btn-primary data-control-edit" title="Do data deduplication" style="float: right;" > 
+	     			<button id="btn_profile_deduplicate" type="button" class="btn btn-sm btn-info data-control-edit" title="Do data deduplication" style="float: right;" > 
 						<i class="fa fa-compress" aria-hidden="true"></i> Deduplicate 
 					</button>
 				</h4>
