--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -24,7 +24,7 @@
     	<button type="button" class="btn btn-do-now" onclick="refreshAllProfiles()" title="Refresh Profile List" > 
     		<i class="fa fa-refresh" aria-hidden="true"></i> Refresh
     	</button>
-    	<button type="button" class="btn btn-success data-control-update" onclick="showMergeDuplicateProfileDialog()" title="Process all duplicated profiles into a single profile" > 
+    	<button type="button" class="btn btn-info data-control-update" onclick="showMergeDuplicateProfileDialog()" title="Process all duplicated profiles into a single profile" > 
     		<i class="fa fa-compress" aria-hidden="true"></i> Deduplicate All
     	</button>
     	<button type="button" class="btn btn-import-data data-control-update" onclick="importProfileHandler()" title="Import Profile from uploaded CSV file" > 
