--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -21,8 +21,8 @@
 		<!-- Top User Menu -->
 		<ul class="nav navbar-right top-nav">
 			<li>				 
-				<a href="javascript: initLeoChatBot('global')" title="Leo Chatbot" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Your personal AI assistant on the CDP"  > 
-					<i class="fa fa-commenting-o"></i> Leo Chatbot 
+				<a href="javascript: initLeoChatBot('global')" title="AI Chatbot" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Your personal AI assistant on the CDP"  > 
+					<i class="fa fa-commenting-o"></i> AI Chatbot 
 				</a> 
 			</li>
 			<li class="dropdown" style="min-width:168px!important;">
