show menu ai chatbot if ready

--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -20,7 +20,7 @@
 
 		<!-- Top User Menu -->
 		<ul class="nav navbar-right top-nav">
-			<li style="display: none;">				 
+			<li style="display: none;" id="menu_ai_chatbot" >				 
 				<a href="javascript: initLeoChatBot('global')" title="AI Chatbot" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Your personal AI assistant on the CDP"  > 
 					<i class="fa fa-commenting-o"></i> AI Chatbot 
 				</a> 
