fix bugs profile API and improve UI

--- a/resources/app-templates/recommender/presentation-item.html
+++ b/resources/app-templates/recommender/presentation-item.html
@@ -78,6 +78,11 @@
 			font-size: 28px!important;
 		}
 		
+		.reveal .code-wrapper code {
+		    white-space: pre;
+		    background: #FFF!important;
+		}
+		
 		@media only screen and (max-width: 600px) {
 		  	.reveal .slides {
 			  	inset: 38% auto auto 50%!important;
