--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -225,7 +225,7 @@
 				                   <p data-field="governmentIssuedIDs" data-fieldholder="html_hashset" data-fieldtype="hashset" data-editable="true" > </p>
 				              	</li>				               
                               	<li>
-				                   <label > <i class="fa fa-fw fa-list"></i> List of Application ID <span class="small_highlight_text">(Data for Identity Resolution)</span> </label> 
+				                   <label > <i class="fa fa-fw fa-list"></i> List of Platform Application ID <span class="small_highlight_text">(Data for Identity Resolution)</span> </label> 
 				                   <button type="button" class="btn btn-do-now btn-xs" onclick="profileAddNewTextHashSet('applicationIDs')"title="Add New Application ID"  > 
 				    					<i class="fa fa-plus-circle" aria-hidden="true"></i> Add Application ID 
 				    			   </button>
