--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -862,7 +862,7 @@
 								                   <p data-field="governmentIssuedIDs" data-fieldholder="html_hashset" data-fieldtype="hashset" > </p>
 								               	</li>
 								               	<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-id-card-o"></i> List of Application ID </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-id-card-o"></i> List of Platform Application ID </b> 
 								                   <p data-field="applicationIDs" data-fieldholder="html_hashset" data-fieldtype="hashset" > </p>
 								               	</li>
 								               	<li>
