--- a/resources/app-templates/leocdp-admin/modules/campaign/campaign-list.html
+++ b/resources/app-templates/leocdp-admin/modules/campaign/campaign-list.html
@@ -11,7 +11,7 @@
     	<button type="button" class="btn btn-do-now" onclick="campaignListRefresh()" title="Refresh data of campaign list" > 
     		<i class="fa fa-refresh" aria-hidden="true"></i> Refresh
     	</button>
-		<button type="button" class="btn btn-success data-control-insert" onclick="" >
+		<button type="button" class="btn btn-success data-control-insert" onclick="campaignEditor('new')" >
 			<i class="fa fa-plus-circle" aria-hidden="true"></i> New Campaign
 		</button>
 	</div>
