--- a/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
@@ -27,7 +27,6 @@
 	<p> Enter the name of segment and set query builder to search profiles </p>
 	
 	<div class="panel-group">
-	
 		<!--  1 metadata  -->
 		<div class="panel panel-leoadmin">
 			<div class="panel-heading"> <b> <i class="fa fa-info-circle" aria-hidden="true"></i> Segment Metadata </b>  </div>
@@ -233,7 +232,7 @@
 		<div class="panel panel-leoadmin">
 			<div class="panel-heading"> 
 				<b> <i class="fa fa-filter" aria-hidden="true"></i> Data Query Rules </b> 
-				<button type="button" class="btn btn-sm btn-goto-router" onclick="initLeoChatBot('segment')" title="Query with LEO AI" style="margin-left: 16px; display: none;">  
+				<button type="button" class="btn btn-sm btn-goto-router" onclick="initLeoChatBot('segment')" title="Run Data Query Builder with Generative AI" style="margin-left: 16px; display: none;">  
 					<i class="fa fa-object-group" aria-hidden="true"></i> Query with LEO AI
        			</button>
 			</div>
